[package]
name = "two_timer"
version = "2.2.4"
authors = ["dfhoughton <dfhoughton@gmail.com>"]
description="parser for English time expressions"
homepage="https://github.com/dfhoughton/two-timer"
repository="https://github.com/dfhoughton/two-timer"
documentation = "https://docs.rs/two_timer"
keywords=["time", "nlp", "parse"]
categories=["date-and-time", "parsing"]
license="MIT"
edition = "2018"

[profile.release]
panic = "abort"

[dependencies]
pidgin = "0.4.4"
lazy_static = "1.4"
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
regex = "1.7"
serde_json = "1"

[features]
small_grammar = []
